Added passing session object to listings.template so that the delete button shows up for admins.

--- a/template/listings.mustache
+++ b/template/listings.mustache
@@ -26,5 +26,8 @@
 </div>
 
 <script type="text/javascript" src="script.js"></script>
+{{#isAdmin}}
+<script type="text/javascript">setAdminMode({{isAdmin}});</script>
+{{/isAdmin}}
 </body>
 </html>
