Modified the navbar to be of the not logged in form when the user isn't logged in, rather than showing placeholder username.

--- a/template/add_listing.mustache
+++ b/template/add_listing.mustache
@@ -12,7 +12,15 @@
 <body class="bg-light">
 <!--Reusable navbar-->
 <script type="text/javascript" src="navbar.js"></script>
-<script>setupNavbarUser("{{username}}", "{{username}}.jpg");createNavbar("profile");</script>
+<script>
+  {{#username}}
+  setupNavbarUser("{{username}}", "{{username}}.jpg");
+  createNavbar("profile");
+  {{/username}}
+  {{^username}}
+    createNavbar("profile", false);
+  {{/username}}
+</script>
 <!--Reusable navbar ends-->
 <div class="login-form" id="addContainer"></div>
 
