--- a/template/listing_template.mustache
+++ b/template/listing_template.mustache
@@ -35,14 +35,10 @@
                             <hr class="mt-0 bg-dark">
                         </div>
                             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                <ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                </ol>
                                 <div class="carousel-inner">
                                     {{#images}}
                                     <div class="carousel-item active">
-                                        <img class=" imagesContainer img-fluid" src="{{demoimgurl}}">
+                                        <img class=" imagesContainer img-fluid" src="{{.}}">
                                     </div>
                                     {{/images}}
                                     {{^images}}
