Fixed listing carousel diplaying images in a list

--- a/template/listing_template.mustache
+++ b/template/listing_template.mustache
@@ -35,9 +35,9 @@
                             <hr class="mt-0 bg-dark">
                         </div>
                             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                <div class="carousel-inner">
+                                <div id="carouselImageArray" class="carousel-inner">
                                     {{#images}}
-                                    <div class="carousel-item active">
+                                    <div class="carousel-item">
                                         <img class=" imagesContainer img-fluid" src="{{.}}">
                                     </div>
                                     {{/images}}
