--- a/template/listing_template.mustache
+++ b/template/listing_template.mustache
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="listing_template.js"></script>
-
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body class="bg-light">
     <!--Reusable navbar-->
