--- a/template/listings.mustache
+++ b/template/listings.mustache
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/public/app/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body class="bg-light">
 <!--Reusable navbar-->
