Added support for messaging (still refreshing though)

--- a/template/messages.mustache
+++ b/template/messages.mustache
@@ -32,5 +32,6 @@
 </div>
 
 <script type="text/javascript" src="messages.js"></script>
+<script> const currentUser = "{{username}}"; //current username of session</script>
 </body>
 </html>
