Added listings views counter (backend only)

--- a/template/listing_template.mustache
+++ b/template/listing_template.mustache
@@ -29,11 +29,11 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-7 listingContainer">
-            <div class="border border-dark pb-3">
+            <div class="border pb-3">
                 <div class="d-flex flex-column">
                     <div class="p-2 align-self-center">
                         <h2 id="itemTitle">{{title}}</h2>
-                        <hr class="mt-0 bg-dark">
+                        <hr class="mt-0">
                     </div>
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                         <div id="carouselImageArray" class="carousel-inner">
