Add send message from listing template view

--- a/template/listing_template.mustache
+++ b/template/listing_template.mustache
@@ -95,7 +95,7 @@
                         {{^username}}
                             <a id="offerBttn" href="/login" class="btn btn-primary">Make Offer</a>
                         {{/username}}
-                        <a href="#" class="btn btn-warning float-right">Message Seller</a>
+                        <a href="/messages/{{poster}}" class="btn btn-warning float-right">Message Seller</a>
                     </li>
                 </ul>
             </div>
