--- a/template/listing_template.mustache
+++ b/template/listing_template.mustache
@@ -11,6 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="listing_template.js"></script>
     <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body class="bg-light">
 <!--Reusable navbar-->
@@ -85,6 +86,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item" id="itemCondition"> Condition:
                         <span class="text-success" id="itemCondText">{{condition}}</span>
+                        <span class="float-right" data-toggle="tooltip" title="This listing has been viewed {{views}} time(s)" data-placement="right"><i class="fas fa-eye"></i> {{views}}</span>
                     </li>
                     <li class="list-group-item">
                         {{#username}}
@@ -107,8 +109,9 @@
                 </script>
             {{/canDel}}
         </div>
-
     </div>
+    <!-- offers -->
+    <div class="col-12" id="offerContainer"></div>
 </div>
 
 <!-- Form Modal -->
