Chat title to button

--- a/template/messages.mustache
+++ b/template/messages.mustache
@@ -27,7 +27,7 @@
         <div class="w-100 p-3 text-center border-bottom"><h4>Conversations</h4></div>
     </div>
     <div id="conversationContainer" class="h-100">
-        <div id="convoPartnerTitle" class="w-100 p-3 text-center border-bottom"><h4></h4></div>
+        <a id="convoPartnerTitle" class="btn btn-light btn-block btn-lg p-3 border-bottom"><h4></h4></a>
     </div>
 </div>
 
