--- a/template/listing_template.mustache
+++ b/template/listing_template.mustache
@@ -110,8 +110,24 @@
             {{/canDel}}
         </div>
     </div>
-    <!-- offers -->
-    <div class="col-12" id="offerContainer"></div>
+    <!-- offers only visible if admin or seller -->
+    <div class="col-12" id="offerContainer">
+        {{#canDel}}
+        <h4 class="text-secondary m-2 mb-5">Offers for this listing:</h4>
+            {{#offers}}
+                <div class="w-100 m-2">
+                    <span class="profilePicContainer" id="itemProfileContainer">
+                        <a class="profileLink text-primary" href="/users/{{bidder.username}}">
+                            <img class="profilePic" id="listingProfilePic" width="40" src="{{bidder.profilePic}}">
+                            <span id="profileText">{{bidder.username}}</span>
+                        </a>
+                    </span>
+                    bid <h5 class="text-success d-inline">${{bid}}</h5> on {{date}}
+                    <button class="btn btn-success acceptOffer" bidder="{{bidder.username}}" listing="{{title}}" data-toggle="modal" data-target="#acceptModal">Accept Offer</button>
+                </div>
+            {{/offers}}
+        {{/canDel}}
+    </div>
 </div>
 
 <!-- Form Modal -->
@@ -130,10 +146,30 @@
             </div>
             <div class="modal-footer">
                 <button id="modalCloseBtn" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-
             </div>
         </div>
     </div>
+</div>
+
+<!-- accept modal -->
+<div class="modal fade" id="acceptModal" tabindex="-1" role="dialog" aria-labelledby="acceptModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="acceptModalLabel">Accept offer by user ?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="acceptModalBody">
+        This will send an automated message notifying user that their offer was accepted.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button id="finalOfferAcceptButton" type="button" data-dismiss="modal" class="btn btn-success">Accept</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 </body>
